--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,8 +6,9 @@
 # Appearance
 
 appearance:
+  day_night = true
   theme_day: minimal
-  theme_night:
+  theme_night: dark
   font: native
   font_size: L
 
@@ -15,9 +16,9 @@ appearance:
 
 marketing:
   seo:
-    site_type: Organization
+    site_type: Lab
     local_business_type: ''
-    org_name: ''
+    org_name: 'Lemons'
     description: 'A highly-customizable Hugo research group theme powered by Wowchemy website builder.'
     twitter: 'wowchemy'
   analytics:
@@ -29,7 +30,7 @@ marketing:
 
 # Site header
 
-header:
+header:Lemons
   navbar:
     enable: true
     align: r
