--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -17,9 +17,9 @@ marketing:
   seo:
     site_type: Organization
     local_business_type: ''
-    org_name: ''
-    description: 'A highly-customizable Hugo research group theme powered by Wowchemy website builder.'
-    twitter: 'wowchemy'
+    org_name: 'Lemons Lab'
+    description: 'A lab in Southern University of Science and Technology'
+    twitter: 'Lemons'
   analytics:
     google_analytics: ''
     baidu_tongji: ''
@@ -84,7 +84,7 @@ features:
     commento:
       url: ''
   search:
-    provider: wowchemy
+    provider: Lemons
     algolia:
       app_id: ''
       api_key: ''
