--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -39,23 +39,23 @@ header:
     show_search: true
     highlight_active_link: false
 
-# Site footer
+# # Site footer
 
-footer:
-  copyright:
-    notice: '© {year} Me. This work is licensed under {license}'
-    license:
-      enable: true
-      allow_derivatives: false
-      share_alike: true
-      allow_commercial: false
+# footer:
+#   copyright:
+#     notice: '© {year} Me. This work is licensed under {license}'
+#     license:
+#       enable: true
+#       allow_derivatives: false
+#       share_alike: true
+#       allow_commercial: false
 
 # Localization
 
-locale:
-  date_format: 'Jan 2, 2006'
-  time_format: '3:04 PM'
-  address_format: en-us
+# locale:
+#   date_format: 'Jan 2, 2006'
+#   time_format: '3:04 PM'
+#   address_format: en-us
 
 # Site features
 
