--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -11,21 +11,21 @@ appearance:
   font: native
   font_size: L
 
-# SEO
+# # SEO
 
-marketing:
-  seo:
-    site_type: Organization
-    local_business_type: ''
-    org_name: 'Lemons Lab'
-    description: 'A lab in Southern University of Science and Technology'
-    twitter: 'Lemons'
-  analytics:
-    google_analytics: ''
-    baidu_tongji: ''
-  verification:
-    google: ''
-    baidu: ''
+# marketing:
+#   seo:
+#     site_type: Organization
+#     local_business_type: ''
+#     org_name: 'Lemons Lab'
+#     description: 'A lab in Southern University of Science and Technology'
+#     twitter: 'Lemons'
+#   analytics:
+#     google_analytics: ''
+#     baidu_tongji: ''
+#   verification:
+#     google: ''
+#     baidu: ''
 
 # Site header
 
